@@ -1,15 +1,15 @@
-bef2a4e74e4cbe8095e2801c3d9ca7ac *ChangeLog
-3f173952fd301f8aebde17b3dea8db66 *DESCRIPTION
+222ea01fd6cc28573888b34bdbf9ca00 *ChangeLog
+825fe210f79e9ff0a122dd9bd1f06c35 *DESCRIPTION
 c46c5820371c6a714067c2572061e64a *NAMESPACE
 c91e8304c939e4db6ca1039c7ae58864 *R/RcppExports.R
 2ae3d258444ab4c38a71ba99276cd3a9 *R/stopwatch.R
 d1f9bcf3bc6c2e515459435c5efc555a *README.md
-630fd27b356fc8c5c8fa15c381a2bb5a *build/partial.rdb
-c71a617202b30b969c40af4d3a05e9d5 *build/vignette.rds
+6e2384344ccb4d35424e5ffcb434d2aa *build/partial.rdb
+613f5c08b0a8812ee9b0f6e67fc3033b *build/vignette.rds
 87c92bd52eb970c53e5006cdb3fb093d *cleanup
 9757d633b341be4d649d5671a48ca208 *inst/AUTHORS
 21abd8dfed73283e13f84d25982e2472 *inst/COPYRIGHTS
-7af18432480560e7f6823a63ab4defef *inst/NEWS.Rd
+47ed74721f7a67fe57c7626be8bea2be *inst/NEWS.Rd
 2f2772fb9533ab03aa097512c1e8ca0b *inst/doc/introduction.html
 0aaf84178d2b802cc2d4009deba39744 *inst/doc/introduction.md
 65b75c13126e069b65b359df73da1942 *inst/examples/exampleFour.cpp
@@ -44,7 +44,7 @@ db30aed09c6c209732e3eb940ca966b5 *inst/include/spdlog/details/log_msg_buffer-inl
 ca0560cfa72bc63556fa0995cbcbda7e *inst/include/spdlog/details/log_msg_buffer.h
 8b60f9a8b886432a51e5c7b4c60d1652 *inst/include/spdlog/details/mpmc_blocking_q.h
 7d9b1a33832b3670e18de41f1a2bd79b *inst/include/spdlog/details/null_mutex.h
-105c80cc444f051b40ad2935e34d954b *inst/include/spdlog/details/os-inl.h
+71426b8dacaff3b1ecf37f86958a0cfa *inst/include/spdlog/details/os-inl.h
 6115e3b75dcc465a12725ca471d88644 *inst/include/spdlog/details/os.h
 646a3cb29d1e49e3ab7da823640c3e35 *inst/include/spdlog/details/periodic_worker-inl.h
 f93ea1414cc0087904c59696a7a39f6b *inst/include/spdlog/details/periodic_worker.h
@@ -60,14 +60,14 @@ e64b24aaead752fc8053ffc8caac6bc4 *inst/include/spdlog/details/udp_client.h
 5e5e051284aaa70a268ce7ff2bea1554 *inst/include/spdlog/details/windows_include.h
 5be34453e73f6cbc902e1f4a44b27d63 *inst/include/spdlog/fmt/bin_to_hex.h
 5b2524316f6709db62ac74389fe8482b *inst/include/spdlog/fmt/bundled/args.h
-81ea715c456557456059557b2d5b4010 *inst/include/spdlog/fmt/bundled/base.h
+ca77ea7c570f85d1e33ad1daa4381887 *inst/include/spdlog/fmt/bundled/base.h
 8855d403c253cf755dacd9d03263be8b *inst/include/spdlog/fmt/bundled/chrono.h
 b91c9697a84ca08a181e41c06a6ca36f *inst/include/spdlog/fmt/bundled/color.h
-bdb2414ae5e8457b87ef7b19480e02b6 *inst/include/spdlog/fmt/bundled/compile.h
+fc97d15ad7b6799874e7f622ca023bf7 *inst/include/spdlog/fmt/bundled/compile.h
 c332419718513c270a50a91d8a7f95bf *inst/include/spdlog/fmt/bundled/core.h
 af88d758f75f3c5c48a967501f24384b *inst/include/spdlog/fmt/bundled/fmt.license.rst
 6cba4de97b012cf2e718be882f9e98e1 *inst/include/spdlog/fmt/bundled/format-inl.h
-d0543a0a31e5f21f31133947a9cc2965 *inst/include/spdlog/fmt/bundled/format.h
+c994640b56a7f9d410a970fcf4f1f86d *inst/include/spdlog/fmt/bundled/format.h
 158e8bd0cdf18513a53e8b435e6a703c *inst/include/spdlog/fmt/bundled/locale.h
 38dd8b12f8fae1ecdfa02af68926d803 *inst/include/spdlog/fmt/bundled/os.h
 d2e0cb96c3775503d53c9407e28c15a1 *inst/include/spdlog/fmt/bundled/ostream.h
@@ -87,7 +87,7 @@ f144fcc94d4aeffc506a5ed11cfd2b0c *inst/include/spdlog/formatter.h
 27f9b9b1875730bfbad486fa8c7aa46e *inst/include/spdlog/logger-inl.h
 c7ec3fd4ee69cefece86a1cf334b44b7 *inst/include/spdlog/logger.h
 2207bb224706a9deef8f9ec91622f654 *inst/include/spdlog/mdc.h
-175a2faa753655bf7d59c88aeb843c0b *inst/include/spdlog/pattern_formatter-inl.h
+d71d9de7fd1b26ddd26ac0fab73e2813 *inst/include/spdlog/pattern_formatter-inl.h
 30ade8a01a8e9ee7b7165ec0ba7d9bde *inst/include/spdlog/pattern_formatter.h
 9fb134af8cb09d9fcaa2fa59d61c756a *inst/include/spdlog/sinks/android_sink.h
 964b0218d849876797ff299e51760837 *inst/include/spdlog/sinks/ansicolor_sink-inl.h
@@ -127,7 +127,7 @@ c23bb87565961a9c7025ae0bf922f93c *inst/include/spdlog/spdlog-inl.h
 523bd93d0a30aa837f082187e3905ce2 *inst/include/spdlog/spdlog.h
 fe2aa12b003fbf41d39386b926305f24 *inst/include/spdlog/stopwatch.h
 ec1105e4b30fd641daa7a27a2c4ab02d *inst/include/spdlog/tweakme.h
-fb1886405747fabb464ceddeb85e881e *inst/include/spdlog/version.h
+f619d77937637921fd7ca5d8607aaaa3 *inst/include/spdlog/version.h
 c851cde430d920b87781927b016ff5a8 *inst/include/spdlog_stopwatch.h
 346eb5456550f5aacf6c56360c8d2041 *man/RcppSpdlog-package.Rd
 6bcb50fdd388e53b542b335934ad5abf *man/exampleRsink.Rd
