@@ -3,6 +3,12 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/rcppspdlog/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/rcppspdlog/issues/#1}{##1}}
 
+\section{Changes in RcppSpdlog version 0.0.21 (2025-03-30)}{
+  \itemize{
+    \item Upgraded to upstream release spdlog 1.15.2 (including fmt 11.1.4)
+  }
+}
+
 \section{Changes in RcppSpdlog version 0.0.20 (2025-02-01)}{
   \itemize{
     \item New multi-threaded logging example (Young Geun Kim and Dirk via \ghit{22})
