@@ -1,3 +1,10 @@
+2025-03-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Version 0.0.21
+
+	* inst/include/spdlog/*: New upstream release spdlog 1.15.1 (which
+	includes fmt 11.1.4)
+
 2025-02-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Version 0.0.20
